tests/NormalTests/paczka1/fuzzy1/17601645.err
Error in line 9: S519 S159 51,8
Error in line 13: 6Nt A:88 142,8
Error in line 17: kLLekXPWXHP S519 110,0
Error in line 10: 6Nt A388 32,1
Error in line 31: o2JWpS6vlS Sr59 r20,6
Error in line 32: S519 S159 77,03
Error in line 36: S519 S159 374,9
